# ConsensLib

./: .travis.yml  CMakeLists.txt  INSTALLATION  LICENSE  README.md  mainpage.doxygen
documentation/: doxygen.cfg
documentation/sphinx/: conf.py  index.rst
include/: CMakeLists.txt
include/ConsensLib/: Consens.hpp  GraphTraits.hpp  Types.hpp
include/ConsensLib/Intern/: Enumeration.hpp
src/Examples/: CMakeLists.txt  Example.cpp
src/Test/: CMakeLists.txt  CheckSubgraphs.hpp  CustomizedTest.cpp  SimpleTest.cpp  main.cpp
